# Change Log
All notable changes to this project will be documented in this file.
This project adheres to [Semantic Versioning](http://semver.org/). Note that
0.x versions may be breaking, per the semver standard.

## Unreleased

## 0.1.2 (2017-05-04)

* Ensure any % signs in command output are encoded to prevent syslog.log treating them as
  format specifiers and failing with an ArgumentError

## 0.1.1 (2017-05-04)

* Add a :delete action to remove old crons

## 0.1.0

* First version