@@ -3,7 +3,7 @@ source 'https://rubygems.org'
 gem 'berkshelf',  '~> 6.0'
 gem 'chefspec',   '~> 7.0'
 gem 'foodcritic', '~> 11.0'
-gem 'chef', '~>13.2'
+gem 'chef', '~>12.18'
 # Temporarily pin molinillo to a version that doesn't break berkshelf
 # per https://github.com/berkshelf/solve/issues/67
 gem 'molinillo', '<0.6'
