@@ -9,6 +9,9 @@ RSpec.configure do |c|
   c.platform = 'ubuntu'
   c.version = '14.04'
 
+  # Don't clear cookbooks from the server-runner between each test for performance
+  c.server_runner_clear_cookbooks = false
+
   c.alias_example_group_to :describe_resource, describe_resource: true
 end
 
