@@ -5,6 +5,9 @@ This project adheres to [Semantic Versioning](http://semver.org/). Note that
 
 ## Unreleased
 
+* Ignore build-time files from the vendored cookbook
+* Update build dependencies and build against Chef 12 and Chef 13
+
 ## 0.1.2 (2017-05-04)
 
 * Ensure any % signs in command output are encoded to prevent syslog.log treating them as
